# TemperatureController

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Include/: CommonConfig.hpp
Include/Exceptions/: XArgumentNull.hpp  XBaseException.hpp  XConfigError.hpp  XFileNotFound.hpp  XInvalidArgument.hpp
Include/Interfaces/: IAppliance.hpp  IDisplayManager.hpp  IProgram.hpp  ISessionManager.hpp  ISystemConfigProcessor.hpp  ISystemConfigReader.hpp  ITemperatureController.hpp  ITemperatureManager.hpp  ITemperatureObserver.hpp  ITemperaturePublisher.hpp  ITemperatureSensor.hpp  ITemperatureSimulator.hpp
Include/Interfaces/Entities/: IApplianceConfig.hpp  IApplianceConfigMutable.hpp  ISystemConfig.hpp  ISystemConfigMutable.hpp
Include/Interfaces/Factories/: IApplianceFactory.hpp  IGenericObjectFactoryT.hpp  IObjectFactories.hpp
Include/Internal/: CallbackTypes.hpp  Cooler.hpp  DisplayManager.hpp  Heater.hpp  ObjectFactory.hpp  Program.hpp  SessionManager.hpp  SystemConfigProcessor.hpp  SystemConfigReader.hpp  TemperatureController.hpp  TemperatureManager.hpp  TemperaturePublisher.hpp  TemperatureSensor.hpp  TemperatureSimulator.hpp
Include/Internal/Entities/: ApplianceConfig.hpp  SystemConfig.hpp
Src/: CMakeLists.txt  main.cpp
Src/Internal/: Cooler.cpp  DisplayManager.cpp  Heater.cpp  ObjectFactory.cpp  Program.cpp  SessionManager.cpp  SystemConfigProcessor.cpp  SystemConfigReader.cpp  TemperatureController.cpp  TemperatureManager.cpp  TemperaturePublisher.cpp  TemperatureSensor.cpp  TemperatureSimulator.cpp
TemperatureController.Tests/: CMakeLists.txt
TemperatureController.Tests/Src/: CMakeLists.txt  CommonTestsConfig.hpp  GTestSuite.hpp
TemperatureController.Tests/Src/Internal/: SessionManagerTests.cpp  SystemConfigProcessorTests.cpp  SystemConfigReaderTests.cpp  TemperatureControllerTests.cpp  TemperatureManagerTests.cpp
TemperatureController.Tests/Src/Internal/Entities/Mocks/: SystemConfigMock.hpp
TemperatureController.Tests/Src/Internal/Mocks/: CoolerMock.hpp  HeaterMock.hpp  SystemConfigProcessorMock.hpp  SystemConfigReaderMock.hpp
